Change the folder of the image

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
    iv class="content">
 	<div class="heading">
 		<div class="picture">
-			<img id="headshot" src="images/MacUser.jpg" height="128" width="148" />
+			<img id="headshot" src="MacUser.jpg" height="128" width="148" />
 			<h1>Andres Ramirez</h1>
 			<h3>Bachelor of Business Administration (B.B.A.) </h3>
 		</div>
